--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "scripts": {
     "build": "cd backend && npm install  && cd ../frontend && npm install && npm run build",
-    "start": "node backend/server.js",
+    "start": "cd frontend && npm run build && cd ../backend && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
